changed the colors on the schedule background and fonts to pass the contrast issue

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -1,7 +1,7 @@
 .flex {
   display: flex;
   justify-content: space-around;
-  background-color: #9fa845;
+  background-color: #616429;
   color: white;
   padding-top: 2%;
 }
